--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!Doctype html>
 <html>
+    <!-- bootstrap stylesheet ref -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <header>
+
+    </header>
+
     <body>
-        <p>hello hello</p>
+    
     </body>
+
+    <footer>
+
+    </footer>
 </html>
