--- a/index.html
+++ b/index.html
@@ -1,17 +1,39 @@
 <!Doctype html>
+<!-- home page -->
 <html>
-    <!-- bootstrap stylesheet ref -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<!-- bootstrap stylesheet ref -->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+    crossorigin="anonymous">
 
-    <header>
+<header>
+    <div class="card text-center">
+        <div class="card-header">
+            <ul class="nav nav-pills card-header-pills">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">Active</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                </li>
+            </ul>
+        </div>
+        <div class="card-body">
+            <h5 class="card-title">Start Up Squad</h5>
+            <p class="card-text">Become a bad ass!</p>
+            <a href="#" class="btn btn-primary">bitch</a>
+        </div>
+    </div>
+</header>
 
-    </header>
+<body>
 
-    <body>
-    
-    </body>
+</body>
 
-    <footer>
+<footer>
 
-    </footer>
+</footer>
+
 </html>
