--- a/index.html
+++ b/index.html
@@ -1,39 +1,54 @@
-<!Doctype html>
 <!-- home page -->
+
+<!Doctype html>
 <html>
 <!-- bootstrap stylesheet ref -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
     crossorigin="anonymous">
 
 <header>
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Start Up Squad</h5>
+                  <p class="card-text">blah blah blah</p>
+                  <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+                </div>
+                <img src="assets/images/entre.jpg" class="card-img-top" alt="entre.jpg">
+              </div>
+</header>
+<body>
+    <p></p>
+</body>
+<!-- <header>
     <div class="card text-center">
         <div class="card-header">
             <ul class="nav nav-pills card-header-pills">
+                <- add logo here -->
+                <!-- <img src=""> ->
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Active</a>
+                    <a class="nav-link active" href="#">tab 1</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    <a class="nav-link" href="#">tab 2</a>
                 </li>
             </ul>
         </div>
+        
         <div class="card-body">
             <h5 class="card-title">Start Up Squad</h5>
             <p class="card-text">Become a bad ass!</p>
             <a href="#" class="btn btn-primary">bitch</a>
         </div>
     </div>
-</header>
-
-<body>
-
-</body>
+</header> -->
 
 <footer>
-
+    <!-- <div class="card-footer bg-transparent border-success">boom bitch</div> -->
+    <div class="card mb-3">
+            <div class="card-body">
+              <h5 class="card-title">fooooooter</h5>
+              <p class="card-text"><small class="text-muted">SQUAD UP BITCHES!</small></p>
+            </div>
 </footer>
 
 </html>
