--- a/index.html
+++ b/index.html
@@ -6,25 +6,30 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
     crossorigin="anonymous">
 
+
 <header>
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Start Up Squad</h5>
-                  <p class="card-text">blah blah blah</p>
-                  <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
-                </div>
-                <img src="assets/images/entre.jpg" class="card-img-top" alt="entre.jpg">
-              </div>
+    <div class="card">
+
+        <div class="col-md-offset-5 col-md-2">
+            <img src="assets/images/sus.png" class="card-img-top" alt="sus.png">
+        </div>
+
+
+        <p class="card-text">blah blah blah</p>
+
+    </div>
+    </div>
 </header>
+
 <body>
-    <p></p>
+    <img src="assets/images/entre.jpg" class="card-img-top" alt="entre.jpg">
 </body>
 <!-- <header>
     <div class="card text-center">
         <div class="card-header">
             <ul class="nav nav-pills card-header-pills">
                 <- add logo here -->
-                <!-- <img src=""> ->
+<!-- <img src=""> ->
                 <li class="nav-item">
                     <a class="nav-link active" href="#">tab 1</a>
                 </li>
@@ -42,13 +47,22 @@
     </div>
 </header> -->
 
+<!-- add margins for big center image -->
+<br>
+
 <footer>
-    <!-- <div class="card-footer bg-transparent border-success">boom bitch</div> -->
+    <!-- <div class="card-footer bg-transparent border-success">boom bitch</div>
     <div class="card mb-3">
-            <div class="card-body">
-              <h5 class="card-title">fooooooter</h5>
-              <p class="card-text"><small class="text-muted">SQUAD UP BITCHES!</small></p>
-            </div>
+        <div class="card-body">
+            <h5 class="card-title">fooooooter</h5>
+            <p class="card-text"><small class="text-muted">SQUAD UP BITCHES!</small></p>
+        </div> -->
+
+    <footer class="footer navbar-fixed-bottom p-3 mb-2 bg-secondary">
+        <div class="container">
+            <p class="text-sm-center text-white font-weight-light">SQUAD UP BITCHES!</p>
+        </div>
+    </footer>
 </footer>
 
 </html>
