--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!-- home page -->
+<!-- home page using bootstrap-->
+<!-- try to make this without using bootstrap -->
 
 <!Doctype html>
 <html>
@@ -23,6 +24,8 @@
 
 <body>
     <img src="assets/images/entre.jpg" class="card-img-top" alt="entre.jpg">
+    <!-- possible logo here? -->
+    <!-- <img src="assets/images/thumbnail.png" class="card-img-top" alt="thumbnail.png"> -->
 </body>
 <!-- <header>
     <div class="card text-center">
@@ -61,7 +64,7 @@
 
     <footer class="footer navbar-fixed-bottom p-3 mb-2 bg-secondary">
         <div class="container">
-            <p class="text-sm-center text-white font-weight-light">SQUAD UP BITCHES!</p>
+            <p class="text-sm-center text-white font-weight-light">SQUAD UP!</p>
         </div>
     </footer>
 </footer>
