--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
 <body>
     <img src="assets/images/entre.jpg" class="card-img-top" alt="entre.jpg">
+    
     <!-- possible logo here? -->
     <!-- <img src="assets/images/thumbnail.png" class="card-img-top" alt="thumbnail.png"> -->
 </body>
@@ -51,22 +52,21 @@
 </header> -->
 
 <!-- add margins for big center image -->
-
+<!-- 
 <footer>
-    <!-- <div class="card-footer bg-transparent border-success">boom bitch</div>
+    <div class="card-footer bg-transparent border-success">boom bitch</div>
     <div class="card mb-3">
         <div class="card-body">
             <h5 class="card-title">fooooooter</h5>
             <p class="card-text"><small class="text-muted">SQUAD UP BITCHES!</small></p>
-        </div> -->
-
-    <br>
-
-    <footer class="footer navbar-fixed-bottom p-3 mb-2 bg-secondary">
-        <div class="container">
-            <p class="text-sm-center text-white font-weight-light">SQUAD UP!</p>
         </div>
-    </footer>
+</footer> -->
+
+<footer class="footer navbar-fixed-bottom p-3 mb-2 bg-secondary">
+    <div class="container">
+        <p class="text-sm-center text-white font-weight-light">SQUAD UP!</p>
+    </div>
 </footer>
+
 
 </html>
