add contact page file

--- a/index.html
+++ b/index.html
@@ -16,16 +16,27 @@
             <img src="assets/images/sus.png" class="card-img-top" alt="sus.png">
         </div>
 
-
         <p class="card-text">blah blah blah</p>
 
+        <!-- add glifycon and move to the right aligned with the logo -->
+        <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                SQUAD
+            </button>
+            
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">Something else here</a>
+        </div>
     </div>
-    </div>
+
 </header>
 
 <body>
     <img src="assets/images/entre.jpg" class="card-img-top" alt="entre.jpg">
-    
+
     <!-- possible logo here? -->
     <!-- <img src="assets/images/thumbnail.png" class="card-img-top" alt="thumbnail.png"> -->
 </body>
