--- a/home.html
+++ b/home.html
@@ -134,26 +134,58 @@
 </header>
 
 <body>
-        <!-- <img src="assets/images/hab.jpg" class="card-img-top" alt="entre.jpg"> -->
-</body>
 
+    <body background="assets/images/two.jpg">
+        <!-- <img src="assets/images/two.jpg" alt="two.jpg" class="expand" /> -->
 
-<!-- Footer -->
-<footer class="footer bg-light text-center">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12 mb-5 mb-lg-0">
-                <h4 class="text-uppercase mb-6 text-black text-center">**Quotes go here**</h4>
-                <p class="lead mb-2 text-black text-center">#SquadUp</p>
-                <p><a href="#" class="text-muted text-center">Contact</a></p>
+        <!-- <div class="card border-transparent mb-3 bg-transparent" style="max-width: 18rem;">
+                <div class="card-header">Header</div>
+                <div class="card-body text-dark">
+                  <h5 class="card-title">Dark card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div> -->
 
+              <div class="card w-50 bg-light">
+                    <div class="card-body bg">
+                      <!-- <h6 class="card-title">Card title</h5> -->
+                      <a href="#" class="btn btn-primary">Sign Up!</a>
+                    </div>
+                  </div>
+
+        <!-- <section class="bg-transparent text-white mb-0" id="about">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4 ml-auto">
+                        <p class="lead">words</p>
+                    </div>
+                    <!-- <div class="row-lg-2 mr-auto">
+                        <p class="lead"> blah blah
+                        </p>
+                    </div> -->
+                </div>
             </div>
-            <!-- <div class="col-md-4 mb-5 mb-lg-0">
+        </section> -->
+
+    </body>
+
+
+    <!-- Footer -->
+    <footer class="footer bg-light text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 mb-5 mb-lg-0">
+                    <h4 class="text-uppercase mb-6 text-black text-center">**Quotes go here**</h4>
+                    <p class="lead mb-2 text-black text-center">#SquadUp</p>
+                    <p><a href="#" class="text-muted text-center">Contact</a></p>
+
+                </div>
+                <!-- <div class="col-md-4 mb-5 mb-lg-0">
                 <h4 class="text-uppercase mb-4">#SquadUp</h4>
             </div> -->
-            <img src="assets/images/peeps.png" class="card-img-top" alt="peeps.png">
+                <img src="assets/images/peeps.png" class="card-img-top" alt="peeps.png">
+            </div>
         </div>
-    </div>
-</footer>
+    </footer>
 
 </html>
