card is good to go ish

--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Login dropdown</a>
+                    <a class="navbar-brand" href="#">Log In</a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -146,12 +146,13 @@
                 </div>
               </div> -->
 
-              <div class="card w-50 bg-light">
-                    <div class="card-body bg">
-                      <!-- <h6 class="card-title">Card title</h5> -->
-                      <a href="#" class="btn btn-primary">Sign Up!</a>
-                    </div>
-                  </div>
+        <div class="card text-center col-md-2 col-md-4">
+            <div class="card-body">
+                <h5 class="card-title">BIO</h5>
+                <p class="card-text">some words about your company</p>
+                <!-- <p class="card-text"><small class="text-muted"></small>sign up!</p> -->
+            </div>
+        </div>
 
         <!-- <section class="bg-transparent text-white mb-0" id="about">
             <div class="container">
@@ -159,12 +160,12 @@
                     <div class="col-lg-4 ml-auto">
                         <p class="lead">words</p>
                     </div>
-                    <!-- <div class="row-lg-2 mr-auto">
+                     <div class="row-lg-2 mr-auto">
                         <p class="lead"> blah blah
                         </p>
                     </div> -->
-                </div>
-            </div>
+        </div>
+        </div>
         </section> -->
 
     </body>
