final changes for the day

--- a/home.html
+++ b/home.html
@@ -181,7 +181,7 @@
                 <div class="col-md-12 mb-5 mb-lg-0">
                     <h4 class="text-uppercase mb-6 text-black text-center">**Quotes go here**</h4>
                     <p class="lead mb-2 text-black text-center">#SquadUp</p>
-                    <p><a href="#" class="text-muted text-center">Contact</a></p>
+                    <p><a href="contact.html" class="text-muted text-center">Contact</a></p>
 
                 </div>
                 <!-- <div class="col-md-4 mb-5 mb-lg-0">
@@ -193,3 +193,8 @@
     </footer>
 
 </html>
+
+<!-- to make an image a link -->
+<!-- <a href="default.asp">
+  <img src="smiley.gif" alt="HTML tutorial" style="width:42px;height:42px;border:0;">
+</a> -->
