added logo to top corner

--- a/home.html
+++ b/home.html
@@ -10,21 +10,18 @@
     crossorigin="anonymous">
 <link href="assets/css/style.css" rel="stylesheet">
 
-<header class="masthead bg-light text-black text-center">
+<header class="masthead bg-transparent text-warning text-center">
     <div class="container">
-        <br>
-        <h1>START up SQUAD</h1>
+        
+        <h1>
+            <img src="assets/images/balloon.png" class="logo-img float-left" alt="balloon.png">
 
-        <nav class="navbar navbar-default navbar-inverse" role="navigation">
+            START up SQUAD
+
+        <nav class="navbar navbar-default navbar-inverse float-right" role="navigation">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
                     <a class="navbar-brand" href="#">Log In</a>
                 </div>
 
@@ -102,6 +99,7 @@
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
         </nav>
+    </h1>
         <!-- <img class="img-fluid mb-5 d-block mx-auto square" src="assets/images/sus.png" alt=""> -->
         <!-- <h1 class="text-uppercase mb-0">Start Up Squad</h1> -->
         <!-- <button type="button" class="btn btn-dark">Log In</button> -->
@@ -149,7 +147,8 @@
                 </div>
               </div> -->
 
-        <div class="card text-center col-md-2 col-md-4">
+              <br>
+        <div class="card  text-center col-md-2 col-md-4 mx-auto">
             <div class="card-body">
                 <h5 class="card-title">BIO</h5>
                 <p class="card-text">some words about your company</p>
