contact page start set up, working on login to top right of header

--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,19 @@
 
 <html>
 
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+    crossorigin="anonymous">
+<link href="assets/css/style.css" rel="stylesheet">
+
+<header class="masthead bg-transparent text-warning text-center col-lg-12">
+    <div class="container">
+
+        <a href="home.html"><img src="assets/images/balloon.png" class="logo-img float-left" alt="balloon.png"></a>
+
+        <h1>START up SQUAD</h1>
+    </div>
+</header>
+<body>
 <section id="contact">
     <div class="container">
         <h2 class="text-center text-uppercase text-secondary mb-0">Contact Me</h2>
@@ -54,5 +67,19 @@
         </div>
     </div>
 </section>
+</body>
+
+<footer class="footer bg-light text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 mb-5 mb-lg-0">
+                    <h4 class="text-uppercase mb-6 text-black text-center">**Quotes go here**</h4>
+                    <h6 class="text-uppercase mb-6 text-black text-center">#SquadUp</h6>
+                    <p><a href="contact.html" class="text-muted text-center">Contact</a></p>
+                </div>
+                <img src="assets/images/peeps.png" class="card-img-top" alt="peeps.png">
+            </div>
+        </div>
+    </footer>
 
 </html>
