logo images fixed and header

--- a/home.html
+++ b/home.html
@@ -6,16 +6,18 @@
 <!-- -fix background color for header and footer -->
 
 <html>
+
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
     crossorigin="anonymous">
 <link href="assets/css/style.css" rel="stylesheet">
 
 <header class="masthead bg-transparent text-warning text-center col-lg-12">
+
     <div class="container">
 
-        <a href="home.html"><img src="assets/images/balloon.png" class="logo-img float-left" alt="balloon.png"></a>
+        <a href="home.html"><img src="assets/images/balloon2.png" class="logo-img float-left" alt="balloon2.png"></a>
 
-        <h1>START up SQUAD</h1>
+        <h1>START up SQUAD
 
         <nav class="navbar navbar-default navbar-inverse float-right" role="navigation">
             <div class="container-fluid">
@@ -83,41 +85,11 @@
                 </div>
             </div><!-- /.container-fluid -->
         </nav>
-
-        <!-- </h1> -->
-
-        <!-- <img class="img-fluid mb-5 d-block mx-auto square" src="assets/images/sus.png" alt=""> -->
-        <!-- <h1 class="text-uppercase mb-0">Start Up Squad</h1> -->
-        <!-- <button type="button" class="btn btn-dark">Log In</button> -->
-
-        <!-- <div class="dropdown">
-            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdown" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">
-                Log In
-            </a>
-            <form class="dropdown-menu p-4">
-                <div class="form-group">
-                    <label for="exampleDropdownFormEmail2">Email address</label>
-                    <input type="email" class="form-control" id="exampleDropdownFormEmail2" placeholder="email@example.com">
-                </div>
-                <div class="form-group">
-                    <label for="exampleDropdownFormPassword2">Password</label>
-                    <input type="password" class="form-control" id="exampleDropdownFormPassword2" placeholder="Password">
-                </div>
-                <div class="form-group">
-                    <div class="form-check">
-                        <input type="checkbox" class="form-check-input" id="dropdownCheck2">
-                        <label class="form-check-label" for="dropdownCheck2">
-                            Remember me
-                        </label>
-                    </div>
-                </div>
-                <button type="submit" class="btn btn-primary">Sign in</button>
-            </form>
-        </div> -->
+    </h1>
         <hr class="star-light">
         <!-- <img src="assets/images/entre.jpg" class="card-img-top" alt="entre.jpg"> -->
     </div>
+
 </header>
 
 <body>
@@ -134,10 +106,10 @@
               </div> -->
 
         <br>
-        <div class="card  text-center col-md-2 col-md-4 mx-auto">
+        <div class="card text-center col-md-2 col-md-4 mx-auto">
             <div class="card-body">
-                <h5 class="card-title">BIO</h5>
-                <p class="card-text">some words about your company</p>
+                <h3 class="card-title">BIO</h3>
+                <h6 class="card-text">some words about your company</h6>
                 <!-- <p class="card-text"><small class="text-muted"></small>sign up!</p> -->
             </div>
         </div>
@@ -146,14 +118,14 @@
 
 
     <!-- Footer -->
-    <footer class="footer text-center">
+    <footer class="footer text-center max-width">
         <div class="container">
-            <div class="row">
+            <div class="row ">
                 <div class="col-md-12 mb-5 mb-lg-0">
                     <h4 class="text-uppercase mb-6 text-black text-center">**Quotes go here**</h4>
                     <h6 class="text-uppercase mb-6 text-black text-center">#SquadUp</h6>
                     <!-- <p class="lead mb-2 text-black text-center">#SquadUp</p> -->
-                    <p><a href="contact.html" class="text-muted text-center">Contact</a></p>
+                    <p><a href="contact.html" class="text-muted text-black text-center">Contact</a></p>
 
                 </div>
                 <!-- <div class="col-md-4 mb-5 mb-lg-0">
