trying to get the background image working

--- a/home.html
+++ b/home.html
@@ -4,12 +4,21 @@
 
 <!-- TODO: -->
 <!-- -fix background color for header and footer -->
+<!-- fix log in dropdown -->
+<!-- add questions -->
+<!-- add bio -->
+<!-- center footer on page -->
+<!-- quotes -->
+<!-- fix background picture -->
 
 <html>
 
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-    crossorigin="anonymous">
-<link href="assets/css/style.css" rel="stylesheet">
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+        crossorigin="anonymous">
+    <link href="assets/css/style.css" rel="stylesheet">
+
+</head>
 
 <header class="masthead bg-transparent text-warning text-center col-lg-12">
 
@@ -17,7 +26,7 @@
 
         <a href="home.html"><img src="assets/images/balloon2.png" class="logo-img float-left" alt="balloon2.png"></a>
 
-        <h1>START up SQUAD
+        <h1>START up SQUAD</h1>
 
         <nav class="navbar navbar-default navbar-inverse float-right" role="navigation">
             <div class="container-fluid">
@@ -30,6 +39,7 @@
                     </button>
                     <!-- </div> -->
 
+                    <!-- see if this even works -->
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
@@ -85,7 +95,7 @@
                 </div>
             </div><!-- /.container-fluid -->
         </nav>
-    </h1>
+        <!-- </h1> -->
         <hr class="star-light">
         <!-- <img src="assets/images/entre.jpg" class="card-img-top" alt="entre.jpg"> -->
     </div>
@@ -94,7 +104,9 @@
 
 <body>
 
-    <body background="assets/images/two.jpg">
+<!-- TODO: figure out why i cant set the background in css and why it only shows up here -->
+    <body background="assets/images/nine.jpg">
+    <!-- <body background="assets/images/ten.jpg"> -->
         <!-- <img src="assets/images/two.jpg" alt="two.jpg" class="expand" /> -->
 
         <!-- <div class="card border-transparent mb-3 bg-transparent" style="max-width: 18rem;">
@@ -105,11 +117,15 @@
                 </div>
               </div> -->
 
-        <br>
+
         <div class="card text-center col-md-2 col-md-4 mx-auto">
             <div class="card-body">
                 <h3 class="card-title">BIO</h3>
                 <h6 class="card-text">some words about your company</h6>
+                <p> these are the questions that will be listed</p>
+                <p>Q1</p>
+                <p>Q4</p>
+                <p>Q7</p>
                 <!-- <p class="card-text"><small class="text-muted"></small>sign up!</p> -->
             </div>
         </div>
@@ -122,6 +138,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 mb-5 mb-lg-0">
+                    <hr class="star-light">
                     <h4 class="text-uppercase mb-6 text-black text-center">**Quotes go here**</h4>
                     <h6 class="text-uppercase mb-6 text-black text-center">#SquadUp</h6>
                     <!-- <p class="lead mb-2 text-black text-center">#SquadUp</p> -->
