yo looks like i cant figure out a damn picture

--- a/home.html
+++ b/home.html
@@ -105,7 +105,7 @@
 <body>
 
 <!-- TODO: figure out why i cant set the background in css and why it only shows up here -->
-    <body background="assets/images/nine.jpg">
+    <body background="assets/images/ten.jpg">
     <!-- <body background="assets/images/ten.jpg"> -->
         <!-- <img src="assets/images/two.jpg" alt="two.jpg" class="expand" /> -->
 
